--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ Licence URI: http://www.os-templates.com/template-terms
 <div class="wrapper bgded overlay" style="background-image:url('images/demo/backgrounds/03.png');">
   <div class="hoc container clear"> 
     <!-- ################################################################################################ -->
-    <div class="testimonial clear center"><img class="circle btmspace-30" src="images/demo/beber.png" alt="">
+    <div class="testimonial clear center"><img class="circle btmspace-30" src="images/demo/beber.PNG" alt="">
       <blockquote>Rhoncus orci a porttitor nunc elit et neque suspendisse potenti nunc ut dui ut lacus pulvinar pulvinar suspendisse ex quam vehicula et sollicitudin ac efficitur a est donec et rutrum enim cras.</blockquote>
       <div><strong>A.Doe</strong><br>
         <em>Job / Title</em></div>
