explication du jeu

--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@ Licence URI: http://www.os-templates.com/template-terms
       <div class="one_third first"><a href="#"><img src="images/demo/400x500.png" alt=""></a></div>
       <div class="two_third">
         <div class="btmspace-50">
-          <h3 class="heading">Eget egestas odio donec</h3>
-          <p class="nospace">Praesent urna turpis semper non eros sed accumsan venenatis felis donec rhoncus tincidunt arcu sit amet aliquet vestibulum imperdiet laoreet sapien quis molestie integer tincidunt mauris at placerat congue lectus justo.</p>
+          <h3 class="heading">Le but de PPC</h3>
+          <p class="nospace">PPC reprends le jeu classique pierre-papier-ciseaux (chifoumi pour les français) </p>
         </div>
         <ul class="fa-ul clear">
           <li class="one_half first"><i class="fa-li fa fa-globe"></i>
