--- a/index.html
+++ b/index.html
@@ -62,8 +62,7 @@ Licence URI: http://www.os-templates.com/template-terms
   <div id="pageintro" class="hoc clear"> 
     <!-- ################################################################################################ -->
     <article>
-      <h2 class="heading">Vivamus sed ligula tortor quisque</h2>
-      <p>Ut eu viverra sem ultricies bibendum leo ut mollis</p>
+      <h2 class="heading">Le plus classique des jeux</h2>
       <footer>
         <ul class="nospace inline pushright">
           <li><a class="btn" href="#">Ullamcorper</a></li>
