a lot of changements, oulala

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ Licence URI: http://www.os-templates.com/template-terms
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- Top Background Image Wrapper -->
-<div class="bgded overlay" style="background-image:url('images/demo/backgrounds/01.png');"> 
+<div class="bgded overlay" style="background-image:url('fond1.jpg');"> 
   <!-- ################################################################################################ -->
   <div class="wrapper row1">
     <header id="header" class="hoc clear"> 
@@ -46,9 +46,8 @@ Licence URI: http://www.os-templates.com/template-terms
           <li class="active"><a href="index.html">Home</a></li>
           <li><a class="drop" href="#">Pages</a>
             <ul>
-              <li><a href="pages/gallery.html">Gallery</a></li>
-              <li><a href="pages/full-width.html">test le jeu !!</a></li>
-              <li><a href="pages/basic-grid.html">Basic Grid</a></li>
+              <li><a href="pages/gallery.html">Gallerie</a></li>
+              <li><a href="pages/full-width.html">Test le jeu !!</a></li>
             </ul>
           </li>
         </ul>
@@ -88,7 +87,7 @@ Licence URI: http://www.os-templates.com/template-terms
       <div class="two_third">
         <div class="btmspace-50">
           <h3 class="heading">Le but de PPC</h3>
-          <p class="nospace">PPC reprends le jeu classique pierre-papier-ciseaux (chifoumi pour les français) </p>
+          <p class="nospace">PPC reprends le jeu classique pierre-papier-ciseaux</p>
     </div>
     <!-- ################################################################################################ -->
     <!-- / main body -->
@@ -129,7 +128,7 @@ Licence URI: http://www.os-templates.com/template-terms
 <div class="wrapper bgded overlay" style="background-image:url('images/demo/backgrounds/03.png');">
   <div class="hoc container clear"> 
     <!-- ################################################################################################ -->
-    <div class="testimonial clear center"><img class="circle btmspace-30" src="images/demo/beber_sanchez.PNG" alt="" width="60px" height="60px">
+    <div class="testimonial clear center"><img class="circle btmspace-30" src="images/demo/tk.jpg" alt="" width="6px" height="6px">
       <blockquote>Rhoncus orci a porttitor nunc elit et neque suspendisse potenti nunc ut dui ut lacus pulvinar pulvinar suspendisse ex quam vehicula et sollicitudin ac efficitur a est donec et rutrum enim cras.</blockquote>
       <div><strong>A.Doe</strong><br>
         <em>Job / Title</em></div>
