--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ Licence URI: http://www.os-templates.com/template-terms
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- Top Background Image Wrapper -->
-<div class="bgded overlay" style="background-image:url('fond1.jpg');"> 
+<div class="bgded overlay" style="background-image:url('images/demo/fond1.png');"> 
   <!-- ################################################################################################ -->
   <div class="wrapper row1">
     <header id="header" class="hoc clear"> 
