--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ Licence URI: http://www.os-templates.com/template-terms
   <div class="hoc container clear"> 
     <!-- ################################################################################################ -->
     <div class="testimonial clear center"><img class="circle btmspace-30" src="images/demo/tk.jpg" alt="" width="6px" height="6px">
-      <blockquote>Rhoncus orci a porttitor nunc elit et neque suspendisse potenti nunc ut dui ut lacus pulvinar pulvinar suspendisse ex quam vehicula et sollicitudin ac efficitur a est donec et rutrum enim cras.</blockquote>
+      <blockquote>C'est le meilleur jeu au quelle j'ai jouer. Il n'y a même pas besoin d'un ami pour jouer</blockquote>
       <div><strong>A.Doe</strong><br>
         <em>Job / Title</em></div>
     </div>
