--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@ Licence URI: http://www.os-templates.com/template-terms
     <!-- ################################################################################################ -->
     <div class="testimonial clear center"><img class="circle btmspace-30" src="images/demo/tk.jpg" alt="" width="6px" height="6px">
       <blockquote>C'est le meilleur jeu au quelle j'ai jouer. Il n'y a même pas besoin d'un ami pour jouer... Et puis je n'en ai pas de toute façon.</blockquote>
-      <div><strong>A.Doe</strong><br>
-        <em>Job / Title</em></div>
+      <div><strong>Jaoued</strong><br>
+        <em>Testeur de charcuterie amateur</em></div>
     </div>
     <!-- ################################################################################################ -->
   </div>
