--- a/index.html
+++ b/index.html
@@ -92,6 +92,25 @@ Licence URI: http://www.os-templates.com/template-terms
           <p class="nospace">Le ciseaux bat le papier</p>
           <p class="nospace">Le papier bat la pierre</p>
     </div>
+    <!-- ################################################################################################ -->
+    <!-- / main body -->
+    <div class="clear"></div>
+  </main>
+</div>
+<div class="wrapper bgded" style="background-image:url('images/demo/backgrounds/02.png');">
+  <div class="hoc split clear">
+    <article class="box clear"> 
+      <!-- ################################################################################################ -->
+      <h6 class="heading">Facilisis malesuada odio</h6>
+      <p class="btmspace-30">Diam quisque urna odio ornare ac nisl dictum varius venenatis leo nunc magna velit posuere ut mollis ac consequat et lectus fusce pharetra consequat&hellip;</p>
+      <footer><a class="btn inverse" href="#">Read More</a></footer>
+      <!-- ################################################################################################ -->
+    </article>
+  </div>
+</div>
+<!-- ################################################################################################ -->
+<!-- ################################################################################################ -->
+<!-- ################################################################################################ -->
 <div class="wrapper bgded overlay" style="background-image:url('images/demo/backgrounds/03.png');">
   <div class="hoc container clear"> 
     <!-- ################################################################################################ -->
