--- a/index.html
+++ b/index.html
@@ -131,6 +131,10 @@ Licence URI: http://www.os-templates.com/template-terms
 <div class="wrapper bgded overlay" style="background-image:url('images/demo/backgrounds/03.png');">
   <div class="hoc container clear"> 
     <!-- ################################################################################################ -->
+    <div class="testimonial clear center"><img class="circle btmspace-30" src="images/demo/beber_sanchez.PNG" alt="" width="6px" height="6px">
+      <blockquote>Je suis fier de ce qu'on a fait</blockquote>
+      <div><strong>Beber Sanchez</strong><br>
+          <em>Dévellopeur du jeu qui souhaite rester anonyme</em></div>   
     <div class="testimonial clear center"><img class="circle btmspace-30" src="images/demo/tk.jpg" alt="" width="6px" height="6px">
       <blockquote>C'est le meilleur jeu au quelle j'ai jouer. Il n'y a même pas besoin d'un ami pour jouer... Et puis je n'en ai pas de toute façon.</blockquote>
       <div><strong>Jaoued</strong><br>
