ajout des coordonnées

--- a/index.html
+++ b/index.html
@@ -136,15 +136,16 @@ Licence URI: http://www.os-templates.com/template-terms
   <footer id="footer" class="hoc clear"> 
     <!-- ################################################################################################ -->
     <div class="one_quarter first">
-      <h6 class="title">Mauris ut tempus</h6>
+      <h6 class="title">Adresse </h6>
       <address class="btmspace-30">
-      Street Name &amp; Number<br>
-      Town<br>
-      Postcode/Zip
+      Rue de Burhaimont  &amp; 11<br>
+      Bertrix<br>
+      6880
       </address>
       <ul class="nospace">
-        <li class="btmspace-10"><i class="fa fa-phone"></i> +00 (123) 456 7890</li>
-        <li><i class="fa fa-envelope-o"></i> info@domain.com</li>
+        <li class="btmspace-10"><i class="fa fa-phone"></i>Tel.: 061 41 00 10</li>
+        <li class="btmspace-10"><i class="fa fa-phone"></i>Fax: 061 41 00 19</li>
+        <li><i class="fa fa-envelope-o"></i> E-mail: indbertrix@skynet.be</li>
       </ul>
     </div>
     <!-- ################################################################################################ -->
