--- a/index.html
+++ b/index.html
@@ -101,9 +101,8 @@ Licence URI: http://www.os-templates.com/template-terms
   <div class="hoc split clear">
     <article class="box clear"> 
       <!-- ################################################################################################ -->
-      <h6 class="heading">Facilisis malesuada odio</h6>
-      <p class="btmspace-30">Diam quisque urna odio ornare ac nisl dictum varius venenatis leo nunc magna velit posuere ut mollis ac consequat et lectus fusce pharetra consequat&hellip;</p>
-      <footer><a class="btn inverse" href="#">Read More</a></footer>
+      <h6 class="heading">Images du jeu</h6>
+      <footer><a class="btn inverse" href="#">Voir plus</a></footer>
       <!-- ################################################################################################ -->
     </article>
   </div>
