--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ Licence URI: http://www.os-templates.com/template-terms
     <!-- main body -->
     <!-- ################################################################################################ -->
     <div class="group">
-      <div class="one_third first"><a href="#"><img src="images/demo/400x500.png" alt=""></a></div>
+      <div class="one_third first"><a href="#"><img src="images/demo/ppc4x5.png" alt=""></a></div>
       <div class="two_third">
         <div class="btmspace-50">
           <h3 class="heading">Le but de PPC</h3>
