--- a/index.html
+++ b/index.html
@@ -86,11 +86,12 @@ Licence URI: http://www.os-templates.com/template-terms
       <div class="two_third">
         <div class="btmspace-50">
           <h3 class="heading">Le but de PPC</h3>
-          <p class="nospace">PPC reprends le jeu classique pierre-papier-ciseaux</p>
+          <p class="nospace">PPC reprends le jeu classique pierre-papier-ciseaux. Vous jouer en solo contre l'IA pour l'instant ... (mise à jour) </p>
           <p class="nospace">Les règles ne change pas !!!!</p>
           <p class="nospace">La pierre bat le ciseaux</p>
           <p class="nospace">Le ciseaux bat le papier</p>
           <p class="nospace">Le papier bat la pierre</p>
+          <p class="nospace">!!! pas de puit, volcan, ... !!!!</p>
     </div>
     <!-- ################################################################################################ -->
     <!-- / main body -->
