--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ Licence URI: http://www.os-templates.com/template-terms
     <article class="box clear"> 
       <!-- ################################################################################################ -->
       <h6 class="heading">Images du jeu</h6>
-      <footer><a class="btn inverse" href="#">Voir plus</a></footer>
+      <footer><a class="btn inverse" href="pages/gallery.html">Voir plus</a></footer>
       <!-- ################################################################################################ -->
     </article>
   </div>
