--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ Licence URI: http://www.os-templates.com/template-terms
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
-<div class="wrapper bgded overlay" style="background-image:url('images/demo/backgrounds/03.png');">
+<div class="wrapper bgded overlay" style="background-image:url('images/demo/etoiles.png');">
   <div class="hoc container clear"> 
     <!-- ################################################################################################ -->
     <div class="testimonial clear center"><img class="circle btmspace-30" src="images/demo/beber_sanchez.PNG" alt="" width="6px" height="6px">
