--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -57,28 +57,10 @@ Licence URI: http://www.os-templates.com/template-terms
           <li><a href="../index.html">Home</a></li>
           <li class="active"><a class="drop" href="#">Pages</a>
             <ul>
-              <li class="active"><a href="gallery.html">Gallery</a></li>
-              <li><a href="full-width.html">Full Width</a></li>
-              <li><a href="sidebar-left.html">Sidebar Left</a></li>
-              <li><a href="sidebar-right.html">Sidebar Right</a></li>
-              <li><a href="basic-grid.html">Basic Grid</a></li>
+              <li class="active"><a href="gallery.html">Gallerie</a></li>
+              <li><a href="full-width.html">Test le jeu !!</a></li>
             </ul>
           </li>
-          <li><a class="drop" href="#">Dropdown</a>
-            <ul>
-              <li><a href="#">Level 2</a></li>
-              <li><a class="drop" href="#">Level 2 + Drop</a>
-                <ul>
-                  <li><a href="#">Level 3</a></li>
-                  <li><a href="#">Level 3</a></li>
-                  <li><a href="#">Level 3</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Level 2</a></li>
-            </ul>
-          </li>
-          <li><a href="#">Link Text</a></li>
-          <li><a href="#">Link Text</a></li>
         </ul>
       </nav>
       <!-- ################################################################################################ -->
