--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ Licence URI: http://www.os-templates.com/template-terms
     <div class="clear"></div>
   </main>
 </div>
-<div class="wrapper bgded" style="background-image:url('images/demo/backgrounds/02.png');">
+<div class="wrapper bgded" style="background-image:url('images/demo/lol.png');">
   <div class="hoc split clear">
     <article class="box clear"> 
       <!-- ################################################################################################ -->
