--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@ Licence URI: http://www.os-templates.com/template-terms
     <div class="one_quarter first">
       <h6 class="title">Adresse </h6>
       <address class="btmspace-30">
-      Rue de Burhaimont  &amp; 11<br>
-      Bertrix<br>
+      Rue de Burhaimont 11
+      <br> Bertrix<br>
       6880
       </address>
       <ul class="nospace">
