--- a/pages/full-width.html
+++ b/pages/full-width.html
@@ -90,12 +90,12 @@ Licence URI: http://www.os-templates.com/template-terms
 <!-- ################################################################################################ -->
 <h4>pierre - feuille - ciseaux</h4>
   <button type="button" class="PFC_btn" value="0" />
-    <img src="images/demo/pierre.jpg" alt="pierre" width="200" height="200" /></button>
+    <img src="../images/demo/pierre.jpg" alt="pierre" width="200" height="200" /></button>
   <button type="button" class="PFC_btn" value="1" />
-    <img src="images/demo/papier.jpg" alt="feuille" width="200" height="200" /></button>
+    <img src="../images/demo/papier.jpg" alt="feuille" width="200" height="200" /></button>
   </button>
   <button type="button" class="PFC_btn" value="2" />
-    <img src="images/demo/ciseaux.jpg" alt="ciseaux" width="200" height="200" /></button>
+    <img src="../images/demo/ciseaux.jpg" alt="ciseaux" width="200" height="200" /></button>
   </button>
 <p>Jouez :</p>
 <div id="PFC_show_result"></div>
