--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -110,7 +110,7 @@ Licence URI: http://www.os-templates.com/template-terms
             <li class="one_quarter"><a href="#"><img src="../images/demo/gallery/01.png" alt=""></a></li>
             <li class="one_quarter"><a href="#"><img src="../images/demo/gallery/01.png" alt=""></a></li>
           </ul>
-          <figcaption>Gallery Description Goes Here</figcaption>
+          <figcaption>Bah voila des photos</figcaption>
         </figure>
       </div>
       <!-- ################################################################################################ -->
