--- a/pages/full-width.html
+++ b/pages/full-width.html
@@ -8,7 +8,7 @@ Licence URI: http://www.os-templates.com/template-terms
 -->
 <html>
 <head>
-<title>Etours | Pages | Full Width</title>
+<title>PPC|test le jeu</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <link href="../layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
@@ -23,12 +23,7 @@ Licence URI: http://www.os-templates.com/template-terms
     <div class="fl_left">
       <ul class="faico clear">
         <li><a class="faicon-facebook" href="#"><i class="fa fa-facebook"></i></a></li>
-        <li><a class="faicon-pinterest" href="#"><i class="fa fa-pinterest"></i></a></li>
         <li><a class="faicon-twitter" href="#"><i class="fa fa-twitter"></i></a></li>
-        <li><a class="faicon-dribble" href="#"><i class="fa fa-dribbble"></i></a></li>
-        <li><a class="faicon-linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>
-        <li><a class="faicon-google-plus" href="#"><i class="fa fa-google-plus"></i></a></li>
-        <li><a class="faicon-rss" href="#"><i class="fa fa-rss"></i></a></li>
       </ul>
     </div>
     <div class="fl_right">
@@ -89,13 +84,13 @@ Licence URI: http://www.os-templates.com/template-terms
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <h4>pierre - feuille - ciseaux</h4>
-  <button type="button" class="PFC_btn" value="0" />
-    <img src="../images/demo/pierre.jpg" alt="pierre" width="200" height="200" /></button>
-  <button type="button" class="PFC_btn" value="1" />
-    <img src="../images/demo/papier.jpg" alt="feuille" width="200" height="200" /></button>
+  <button type="button" class="PFC_btn" value="0" >
+    <img src="../images/demo/pierre.jpg" alt="pierre" width="50px" height="50px" /></button>
+  <button type="button" class="PFC_btn" value="1" >
+    <img src="../images/demo/papier.jpg" alt="feuille" width="50px" height="50px" /></button>
   </button>
-  <button type="button" class="PFC_btn" value="2" />
-    <img src="../images/demo/ciseaux.jpg" alt="ciseaux" width="200" height="200" /></button>
+  <button type="button" class="PFC_btn" value="2" >
+    <img src="../images/demo/ciseaux.jpg" alt="ciseaux" width="50px" height="50px" /></button>
   </button>
 <p>Jouez :</p>
 <div id="PFC_show_result"></div>
