--- a/pages/full-width.html
+++ b/pages/full-width.html
@@ -19,20 +19,12 @@
         <li><a class="faicon-twitter" href="#"><i class="fa fa-twitter"></i></a></li>
       </ul>
     </div>
-    <div class="fl_right">
-      <ul class="nospace inline pushright">
-        <li><i class="fa fa-user"></i> <a href="#">Register</a></li>
-        <li><i class="fa fa-sign-in"></i> <a href="#">Login</a></li>
-      </ul>
-    </div>
-    <!-- ################################################################################################ -->
   </div>
 </div>
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- Top Background Image Wrapper -->
-<div class="bgded overlay" style="background-image:url('../images/demo/backgrounds/01.png');"> 
   <!-- ################################################################################################ -->
   <div class="wrapper row1">
     <header id="header" class="hoc clear"> 
@@ -42,15 +34,11 @@
       </div>
       <nav id="mainav" class="fl_right">
         <ul class="clear">
-          <li><a href="../index.html">Home</a></li>
+          <li><a href="../index.html">Accueil</a></li>
           <li class="active"><a class="drop" href="#">Pages</a>
             <ul>
               <li><a href="gallery.html">Gallery</a></li>
-              <li class="active"><a href="full-width.html">Full Width</a></li>
-              <li><a href="sidebar-left.html">Sidebar Left</a></li>
-              <li><a href="sidebar-right.html">Sidebar Right</a></li>
-              <li><a href="basic-grid.html">Basic Grid</a></li>
-            </ul>
+              <li class="active"><a href="full-width.html">Test le jeu !!</a></li>
       </nav>
       <!-- ################################################################################################ -->
     </header>
