--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -8,7 +8,7 @@ Licence URI: http://www.os-templates.com/template-terms
 -->
 <html>
 <head>
-<title>Etours | Pages | Gallery</title>
+<title>Gallerie de photos</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <link href="../layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
@@ -33,8 +33,6 @@ Licence URI: http://www.os-templates.com/template-terms
     </div>
     <div class="fl_right">
       <ul class="nospace inline pushright">
-        <li><i class="fa fa-user"></i> <a href="#">Register</a></li>
-        <li><i class="fa fa-sign-in"></i> <a href="#">Login</a></li>
       </ul>
     </div>
     <!-- ################################################################################################ -->
@@ -50,11 +48,11 @@ Licence URI: http://www.os-templates.com/template-terms
     <header id="header" class="hoc clear"> 
       <!-- ################################################################################################ -->
       <div id="logo" class="fl_left">
-        <h1><a href="../index.html">Etours</a></h1>
+        <h1><a href="../index.html">Gallerie de photos</a></h1>
       </div>
       <nav id="mainav" class="fl_right">
         <ul class="clear">
-          <li><a href="../index.html">Home</a></li>
+          <li><a href="../index.html">Accueil</a></li>
           <li class="active"><a class="drop" href="#">Pages</a>
             <ul>
               <li class="active"><a href="gallery.html">Gallerie</a></li>
@@ -73,10 +71,6 @@ Licence URI: http://www.os-templates.com/template-terms
     <div id="breadcrumb" class="hoc clear"> 
       <!-- ################################################################################################ -->
       <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Lorem</a></li>
-        <li><a href="#">Ipsum</a></li>
-        <li><a href="#">Dolor</a></li>
       </ul>
       <!-- ################################################################################################ -->
     </div>
@@ -95,7 +89,7 @@ Licence URI: http://www.os-templates.com/template-terms
       <!-- ################################################################################################ -->
       <div id="gallery">
         <figure>
-          <header class="heading">Photos de diverses choses assez cocasse pour vous</header>
+          <header class="heading">Photos de diverses choses assez cocasse , je l'espère, pour vous autre gueux</header>
           <ul class="nospace clear">
             <li class="one_quarter first"><a href="#"><img src="../images/demo/gallery/Capture.PNG" alt=""></a></li>
             <li class="one_quarter"><a href="#"><img src="../images/demo/gallery/Capture1.PNG" alt=""></a></li>
