encore et tj des modifs

--- a/pages/full-width.html
+++ b/pages/full-width.html
@@ -37,7 +37,7 @@
           <li><a href="../index.html">Accueil</a></li>
           <li class="active"><a class="drop" href="#">Pages</a>
             <ul>
-              <li><a href="gallery.html">Gallery</a></li>
+              <li><a href="gallery.html">Gallerie</a></li>
               <li class="active"><a href="full-width.html">Test le jeu !!</a></li>
       </nav>
       <!-- ################################################################################################ -->
