suppression de lien nul

--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -85,14 +85,14 @@ Licence URI: http://www.os-templates.com/template-terms
         <figure>
           <header class="heading">Photos de diverses choses assez cocasse pour vous</header>
           <ul class="nospace clear">
-            <li class="one_quarter first"><a href="#"><img src="../images/demo/gallery/Capture.PNG" alt=""></a></li>
-            <li class="one_quarter"><a href="#"><img src="../images/demo/gallery/Capture1.PNG" alt=""></a></li>
-            <li class="one_quarter"><a href="#"><img src="../images/demo/gallery/Capture2.PNG" alt=""></a></li>
-            <li class="one_quarter"><a href="#"><img src="../images/demo/gallery/Capture3.PNG" alt=""></a></li>
-            <li class="one_quarter first"><a href="#"><img src="../images/demo/gallery/Capture4.PNG" alt=""></a></li>
-            <li class="one_quarter"><a href="#"><img src="../images/demo/gallery/Capture5.PNG" alt=""></a></li>
-            <li class="one_quarter"><a href="#"><img src="../images/demo/gallery/image.png" alt=""></a></li>
-            <li class="one_quarter"><a href="#"><img src="../images/demo/gallery/image (1).png" alt=""></a></li>
+            <li class="one_quarter first"><a><img src="../images/demo/gallery/Capture.PNG" alt=""></a></li>
+            <li class="one_quarter"><a><img src="../images/demo/gallery/Capture1.PNG" alt=""></a></li>
+            <li class="one_quarter"><a><img src="../images/demo/gallery/Capture2.PNG" alt=""></a></li>
+            <li class="one_quarter"><a><img src="../images/demo/gallery/Capture3.PNG" alt=""></a></li>
+            <li class="one_quarter first"><a><img src="../images/demo/gallery/Capture4.PNG" alt=""></a></li>
+            <li class="one_quarter"><a><img src="../images/demo/gallery/Capture5.PNG" alt=""></a></li>
+            <li class="one_quarter"><a><img src="../images/demo/gallery/image.png" alt=""></a></li>
+            <li class="one_quarter"><a><img src="../images/demo/gallery/image (1).png" alt=""></a></li>
           </ul>
           <figcaption>Bah voila des photos</figcaption>
         </figure>
