--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -42,7 +42,7 @@ Licence URI: http://www.os-templates.com/template-terms
       </div>
       <nav id="mainav" class="fl_right">
         <ul class="clear">
-          <li><a href="../index.html">Gallerie</a></li>
+          <li><a href="../index.html">Accueil</a></li>
           <li class="active"><a class="drop" href="#">Pages</a>
             <ul>
               <li class="active"><a href="gallery.html">Gallerie</a></li>
@@ -60,12 +60,6 @@ Licence URI: http://www.os-templates.com/template-terms
   <div class="wrapper row2">
     <div id="breadcrumb" class="hoc clear"> 
       <!-- ################################################################################################ -->
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Lorem</a></li>
-        <li><a href="#">Ipsum</a></li>
-        <li><a href="#">Dolor</a></li>
-      </ul>
       <!-- ################################################################################################ -->
     </div>
   </div>
