--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -38,7 +38,7 @@ Licence URI: http://www.os-templates.com/template-terms
     <header id="header" class="hoc clear"> 
       <!-- ################################################################################################ -->
       <div id="logo" class="fl_left">
-        <h1><a href="../index.html">Etours</a></h1>
+        <h1><a href="../index.html">Gallerie</a></h1>
       </div>
       <nav id="mainav" class="fl_right">
         <ul class="clear">
