--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -22,8 +22,8 @@ Licence URI: http://www.os-templates.com/template-terms
     <!-- ################################################################################################ -->
     <div class="fl_left">
       <ul class="faico clear">
-        <li><a class="faicon-facebook" href="#"><i class="fa fa-facebook"></i></a></li>
-        <li><a class="faicon-twitter" href="#"><i class="fa fa-twitter"></i></a></li>
+        <li><a class="faicon-facebook" href="https://fr-fr.facebook.com/JMLP.officiel/"><i class="fa fa-facebook"></i></a></li>
+        <li><a class="faicon-twitter" href="https://twitter.com/elonmusk"><i class="fa fa-twitter"></i></a></li>
       </ul>
     </div>
   </div>
