--- a/pages/full-width.html
+++ b/pages/full-width.html
@@ -15,8 +15,8 @@
     <!-- ################################################################################################ -->
     <div class="fl_left">
       <ul class="faico clear">
-        <li><a class="faicon-facebook" href="#"><i class="fa fa-facebook"></i></a></li>
-        <li><a class="faicon-twitter" href="#"><i class="fa fa-twitter"></i></a></li>
+        <li><a class="faicon-facebook" href="https://fr-fr.facebook.com/JMLP.officiel/"><i class="fa fa-facebook"></i></a></li>
+        <li><a class="faicon-twitter" href="https://twitter.com/elonmusk"><i class="fa fa-twitter"></i></a></li>
       </ul>
     </div>
   </div>
