lien tres tres tres tres tres suspect

--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -95,7 +95,7 @@ Licence URI: http://www.os-templates.com/template-terms
       <!-- ################################################################################################ -->
       <nav class="pagination">
         <ul>
-          <li><a href="#">Hey , coucou toi</a></li>
+          <li><a href="https://extraterrestres.ch/Liens.htm ">Hey , coucou toi</a></li>
         </ul>
       </nav>
       <!-- ################################################################################################ -->
