--- a/pages/full-width.html
+++ b/pages/full-width.html
@@ -58,7 +58,7 @@
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
-<h4>pierre - feuille - ciseaux</h4>
+<h4>pierre - papier - ciseaux</h4>
   <button type="button" class="PFC_btn" value="0" >
     <img src="../images/demo/pierre.jpg" alt="pierre" width="50px" height="50px" /></button>
   <button type="button" class="PFC_btn" value="1" >
